2004-08-13 Ian Rutt
 * Updated documentation a little
 * Minor formatting changes
 * Changes to some constants to conform with EISMINT-1. These should be
   moved to the configuration files at some point.
 
2004-08-13 Magnus Hagdorn
 * fixed bug in glimmer_thck.f90: size of opvrew,opvrns is different from ipvr so where
   construct cannot be used
 * fixed bug in glimmer_velo.f90: last row/column of calculations was missed
 * fixed bug where constant was only set on first pass (glimmer_temp.f90, glimmer_modu.f90)
 * fixed bug in glide_pdd.f90: sp is already loaded
	
2004-08-12 Ian Rutt
 * Added comments to several files: glide_pdd.f90, glimmer_CFproj.f90,
   glimmer_config.f90, glimmer_example.f90.
 * Corrected passing of temperature range within model - should be the
   half-range, so divided range by two in glimmer.f90

2004-08-10 Ian Rutt
 * Updated top-level information files
 * Cleared out unneccessary variables and things from makefile.arc files

2004-08-04 Ian Rutt
 * Completed new PDD code, with Romberg integration from a
   ACM public domain routine (Algorithm 60). This has been tested, and
   should work. Removed glimmer_degd.f90, since this is now redundant.
 * Updated Unix build system to deal with new file.

2004-07-18 Ian Rutt
 * Added new coding of PDD routines, without any NR code,
   (glide_pdd.f90), but not "plumbed in" yet.

2004-07-01 Ian Rutt
 * Added documentation comments to glide_messages.f90

2004-06-30 Ian Rutt
 * Completed standardisation of message system - six levels are provided,
 from 'diagnostics' to 'fatal errors'. The overall message level can be
 set by calling glide_set_msg_level. Two output subroutines are provided:
 glide_msg and glide_stars; the latter prints a line of 70 stars across
 the screen. 
	
2004-06-30 Ian Rutt
 * Fixed Linux build system after my changes yesterday (the problems of
 doing development under Windows...)

2004-06-29 Ian Rutt
 * Began standardisation of GLIMMER's use of standard output, using new module